<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Black.NoTitleBar"
    tools:context=".MainActivity">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Color Demon"
        android:textSize="50sp"
        />

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/title"
        android:layout_marginTop="20dp"
        android:background="@drawable/startbut"
        android:text="@string/start_button"
        android:textColor="@color/orange_rainbow"
        android:textSize="30sp" />
    <Button
        android:id="@+id/shop"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/start"
        android:layout_marginTop="20dp"
        android:background="@drawable/shopbut"
        android:text="@string/shop_button"
        android:textColor="@color/yellow_rainbow"
        android:textSize="30sp" />
    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/shop"
        android:layout_marginTop="20dp"
        android:background="@drawable/settingsbut"
        android:text="@string/settings_button"
        android:textColor="@color/red_rainbow"
        android:textSize="30sp" />
    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/settings"
        android:layout_marginTop="20dp"
        android:background="@drawable/exitbut"
        android:text="@string/exit_button"
        android:textColor="@color/green_rainbow"
        android:textSize="30sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_textView"
        android:textColor="@color/blue_rainbow"
        android:textSize="30sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="350dp"/>
    <ProgressBar
        android:id="@+id/levelpb"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_below="@id/level"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:max="100" />
    <ImageView
        android:id="@+id/brawl"
        android:layout_below="@id/levelpb"
        android:layout_marginLeft="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/app"/>
    <TextView
        android:id="@+id/account"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/brawl"
        android:layout_marginLeft="30dp"
        android:textSize="25sp"
        android:textColor="@color/orange_rainbow"
        android:text="@string/leaders_textView"/>
</RelativeLayout>